Fix tags being split across lines on smaller devices

--- a/notices/static/email-styles.css
+++ b/notices/static/email-styles.css
@@ -9,5 +9,5 @@
     color: white;
     border-radius: 25px;
     padding: 2px 15px;
-
+    white-space: nowrap;
 }
